spacing fixes

--- a/styles/Chat.module.css
+++ b/styles/Chat.module.css
@@ -44,12 +44,16 @@
   flex: 1;
   padding: 0 20px;
   overflow-y: scroll;
-  /* scrollbar-width: none; */
+  scrollbar-width: none;
   -ms-overflow-style: none;
 }
 
 .chat_area::-webkit-scrollbar {
   display: none;
+}
+
+.scroller {
+  margin-top: 70px;
 }
 
 .hello {
